--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.7",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/node": "^22.7.9",
     "@types/react-router-dom": "^5.3.3",
     "@vis.gl/react-google-maps": "^1.2.0",
     "app-turismo-web": "file:",
@@ -42,7 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "sass": "^1.77.8",
-    "typescript": "^5.2.2",
+    "typescript": "^5.6.3",
     "vite": "^5.3.1"
   }
 }
