--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm install --only=dev && tsc -b && vite build",
+    "build": "npm install --production=false && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -18,6 +18,7 @@
     "@types/node": "^22.7.9",
     "@types/react-router-dom": "^5.3.3",
     "@vis.gl/react-google-maps": "^1.2.0",
+    "app-turismo-web": "file:",
     "axios": "^1.7.7",
     "browser-image-compression": "^2.0.2",
     "js-cookie": "^3.0.5",
