--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "app-turismo-web": "file:",
     "axios": "^1.7.7",
     "browser-image-compression": "^2.0.2",
+    "html-to-image": "^1.11.11",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
