--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7"
